--- a/openports/quassel/quassel/pkg/quasselcore.rc
+++ b/openports/quassel/quassel/pkg/quasselcore.rc
@@ -1,9 +1,12 @@
 #!/bin/ksh
 
 daemon="${TRUEPREFIX}/bin/quasselcore"
-daemon_flags="-c ${VARBASE}/quassel"
+daemon_flags="-c ${VARBASE}/quassel --listen 127.0.0.1"
 daemon_user=_quassel
 
 . /etc/rc.d/rc.subr
+
+rc_bg=YES
+rc_reload=NO
 
 rc_cmd $1
