--- a/makepkg/plex-media-server/PKGBUILD
+++ b/makepkg/plex-media-server/PKGBUILD
@@ -10,8 +10,8 @@
 # Contributor: Praekon <praekon@googlemail.com>
 
 pkgname=plex-media-server
-pkgver=1.32.0.6918
-_pkgsum=6f393eda1
+pkgver=1.32.0.6973
+_pkgsum=a787c5a8e
 pkgrel=1
 pkgdesc='The back-end media server component of Plex.'
 arch=('x86_64' 'i686' 'armv7h' 'aarch64')
@@ -28,8 +28,8 @@ source=('plexmediaserver.conf.d'
         'plex.tmpfiles'
         'terms.txt')
 
-#source_aarch64=("https://downloads.plex.tv/plex-media-server-new/${pkgver}-${_pkgsum}/debian/plexmediaserver_${pkgver}-${_pkgsum}_arm64.deb")
-source_armv7h=("https://downloads.plex.tv/plex-media-server-new/${pkgver}-${_pkgsum}/debian/plexmediaserver_${pkgver}-${_pkgsum}_armhf.deb")
+source_aarch64=("https://downloads.plex.tv/plex-media-server-new/${pkgver}-${_pkgsum}/debian/plexmediaserver_${pkgver}-${_pkgsum}_arm64.deb")
+#source_armv7h=("https://downloads.plex.tv/plex-media-server-new/${pkgver}-${_pkgsum}/debian/plexmediaserver_${pkgver}-${_pkgsum}_armhf.deb")
 #source_x86_64=("https://downloads.plex.tv/plex-media-server-new/${pkgver}-${_pkgsum}/redhat/plexmediaserver-${pkgver}-${_pkgsum}.x86_64.rpm")
 #source_i686=("https://downloads.plex.tv/plex-media-server-new/${pkgver}-${_pkgsum}/redhat/plexmediaserver-${pkgver}-${_pkgsum}.i686.rpm")
 
@@ -39,10 +39,10 @@ sha256sums=('398ba7958598609453f5289b3d5f2389d2756158b340cf28e83c39d9ed60280b'
             'c597bee0bcbb59ed791651555a904e5f7e9d2e82f6c6986b6352e5fc38e5b557'
             'b7ff6525a3c7a8be885edc85bb523095f8e25ddb38873127e2a4e97b28f2c7ad'
             'dbfb5a9a7146a975863c0932f1a68c4b040ec5d7e693361f39ddfbf60885e631')
-#sha256sums_x86_64=('3bc2466543ea1a3c7e59a9a70568e79f03d1b94b9fd40cda385984bfee86659a')
-#sha256sums_i686=('426322443253e8cafbbec1ff4747ed9265463f40ebdde7154af60396f9efad75')
-sha256sums_armv7h=('107f72f177724b41f5c49b5f4b5a382fbb4aac13eebbd32f909ef1441e196342')
-#sha256sums_aarch64=('abc3d990f19216711a7ae7562c506aded2fe74c7ba6bc616f92c8cf89c0da600')
+#sha256sums_x86_64=('a8cb57de50ae8ea13d6bf014cab5786a899fad38c2f190783fc3525037292738')
+#sha256sums_i686=('feec323101482981abf3cdedcc9b0ae63ee120924d28a6dbc88148cdc239c8a8')
+#sha256sums_armv7h=('9a15bd77eec82ff09dda896ca9632f299fa093349c820b4eed69f4c46b96e6e4')
+sha256sums_aarch64=('f7a9efbe3ac4f9a1dd18b299a59beed7e24b0c93633387c22a52b75055b955f3')
 
 prepare() {
   if [[ $CARCH = armv7h ]] || [[ $CARCH = aarch64 ]]; then
