openports/megacmd: apply reviews

--- a/openports/megacmd/Makefile
+++ b/openports/megacmd/Makefile
@@ -1,25 +1,30 @@
 COMMENT =		CLI and scriptable application to access MEGA
+
 GH_ACCOUNT =		meganz
 GH_PROJECT =		MEGAcmd
 GH_TAGNAME =		1.6.3_Linux
 PKGNAME =		${DISTNAME:S/_Linux//:L}
+_SDKV =			4.17.1d
+
+SHARED_LIBS +=		mega                      0.0 # 41701.0
+
 CATEGORIES =		net
-DISTFILES =		${DISTNAME}${EXTRACT_SUFX}
 
 MAINTAINER =		kikadf <kikadf.01@gmail.com>
-
-MASTER_SITES0 =		https://github.com/meganz/sdk/archive/refs/tags/
-_SDKV =			4.17.1d
-DISTFILES +=		v${_SDKV}${EXTRACT_SUFX}:0
 
 # MEGAcmd: GPLv3, SDK: BSD 2-clause
 PERMIT_PACKAGE =	Yes
 
-COMPILER =		base-clang ports-gcc
-
 WANTLIB += ${COMPILER_LIBCXX} c cares crypto cryptopp curl curses
 WANTLIB += ereadline m nghttp2 nghttp3 ngtcp2 ngtcp2_crypto_openssl
 WANTLIB += pcre pcrecpp sodium sqlite3 ssl uv z
+
+MASTER_SITES0 =		https://github.com/meganz/sdk/archive/refs/tags/
+
+DISTFILES +=		${DISTNAME}${EXTRACT_SUFX} \
+			meganz-sdk-{}v${_SDKV}${EXTRACT_SUFX}:0
+
+COMPILER =		base-clang ports-gcc
 
 LIB_DEPENDS =		databases/sqlite3 \
 			devel/cryptopp \
@@ -30,22 +35,30 @@ LIB_DEPENDS =		databases/sqlite3 \
 			net/libcares \
 			security/libsodium
 
+TEST_DEPENDS =		devel/gtest
+
 CONFIGURE_STYLE =	autoreconf
-AUTORECONF =		${WRKSRC}/autogen.sh
 AUTOCONF_VERSION =	2.69
 AUTOMAKE_VERSION =	1.16
 
-CONFIGURE_ARGS =	--disable-examples --disable-java --disable-php \
-			--disable-python --disable-chat --without-freeimage \
-			--without-termcap --without-ffmpeg --without-libraw \
-			--without-libzen --without-libmediainfo \
-			--enable-gcc-hardening --enable-static
+CONFIGURE_ARGS =	--disable-chat \
+			--disable-examples \
+			--disable-java \
+			--disable-php \
+			--disable-python \
+			--without-ffmpeg \
+			--without-freeimage \
+			--without-libmediainfo \
+			--without-libraw \
+			--without-libzen \
+			--without-termcap \
+			--enable-gcc-hardening
 
-CONFIGURE_ENV +=	CPPFLAGS="-I${LOCALBASE}/include \
-				  -I${LOCALBASE}/include/ereadline" \
+CPPFLAGS +=		-I${LOCALBASE}/include \
+			-I${LOCALBASE}/include/ereadline
+
+CONFIGURE_ENV +=	CPPFLAGS="${CPPFLAGS}" \
 			LDFLAGS="-L${LOCALBASE}/lib"
-
-FAKE_FLAGS= 		sysconfdir=${PREFIX}/share/examples/megacmd/
 
 post-extract:
 	rm -rf ${WRKSRC}/sdk
