--- a/makepkg/chku/PKGBUILD
+++ b/makepkg/chku/PKGBUILD
@@ -1,16 +1,16 @@
 # Maintainer: kikadf <kikadf.01@gmail.com>
 
 pkgname=chku
-pkgver=1.2
+pkgver=1.4
 pkgrel=1
 pkgdesc="Check updates on host and guests"
 url="https://github.com/kikadf/chku"
 license=(GPLv3)
 depends=('curl')
 makedepends=('unzip')
-arch=('any')
+arch=('aarch64')
 source=(file:///home/archer/share/mega/share/${pkgname}-${pkgver}.tar.gz)
-sha256sums=('27cd1568ce99ecac138196f5365f09b80d9e5cecdfd86d7a68ba7db2d1705789')
+sha256sums=('f162dfe01fddfbf4307a80b7a941ed398a4c3f3d61d6916c06497ac964635ee0')
 
 
 build() {
