--- a/makepkg/chku/PKGBUILD
+++ b/makepkg/chku/PKGBUILD
@@ -1,16 +1,15 @@
 # Maintainer: kikadf <kikadf.01@gmail.com>
 
 pkgname=chku
-pkgver=1.6
+pkgver=2.1
 pkgrel=1
 pkgdesc="Check updates on host and guests"
 url="https://github.com/kikadf/chku"
 license=(GPLv3)
-depends=('curl')
-makedepends=('unzip')
+depends=('curl' 'libarchive')
 arch=('aarch64')
 source=(file:///home/archer/share/mega/share/${pkgname}-${pkgver}.tar.gz)
-sha256sums=('4faeeb64e1274665e82872b0bcd47360d7fb34827ba059622a042b9d07c6183e')
+sha256sums=('2a195025d854bf8ee5cc984693c306f59fb9b76fcca68ff24325490ef1ba0d82')
 
 
 build() {
