--- a/makepkg/chku/PKGBUILD
+++ b/makepkg/chku/PKGBUILD
@@ -1,15 +1,15 @@
 # Maintainer: kikadf <kikadf.01@gmail.com>
 
 pkgname=chku
-pkgver=4.5
+pkgver=5.0
 pkgrel=1
 pkgdesc="Check updates on host and guests"
 url="https://github.com/kikadf/chku"
 license=(GPLv3)
-depends=('curl' 'libarchive')
+depends=('curl' 'libarchive' 'cjson')
 arch=('aarch64')
 source=(file:///home/archer/share/mega/share/${pkgname}-${pkgver}.tar.gz)
-sha256sums=('8632e8bc9340207ed01e8d808dc93042c62d3601bafc0d193a79c00ef3b82c8e')
+sha256sums=('675d6f7c31f0c5d033e5951eabeb82638172a0bcb00dccb88f9acf9f8045a303')
 
 
 build() {
